--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DISABLE_ESLINT_PLUGIN=true
+
+REACT_APP_BASE_URL=https://social-network.samuraijs.com/api/1.1/
+REACT_APP_API_KEY=fddcbb90-bbb0-47e5-bd46-d11e222e5891
