--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DISABLE_ESLINT_PLUGIN=true
 
 REACT_APP_BASE_URL=https://social-network.samuraijs.com/api/1.1/
+REACT_APP_AUTH_TOKEN=cfde9c21-9f8e-4e90-9d33-3675945e05ce
 REACT_APP_API_KEY=fddcbb90-bbb0-47e5-bd46-d11e222e5891
